--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -190,11 +190,14 @@ Distributions of CDI category frequency across all 4 datasets were quite similar
 
 EXAMPLE OF NO DISTRIBUTION 
 
-%FIGURE 2
-\begin{figure}[tb]
-\center{\includegraphics[width=.49\textwidth]{figures/cdicats_4sets.pdf}}
-\caption{\label{fig:cdi_cats} Proportion of children's first words falling into each CDI category. The datasets showed a high degree of consistency, with most first words referring to animals or games and routines. These distributions were highly consistent between older and younger children, suggesting that first words are driven by linguistic rather than conceptual factors.}
-\end{figure}
+\begin{figure*}[]
+\begin{center}
+\includegraphics[scale = .66]{figures/cdicats_4sets.pdf}
+\end{center}
+\caption{Proportion of children's first words falling into each CDI category. The datasets showed a high degree of consistency, with most first words referring to animals or games and routines. These distributions were highly consistent between older and younger children, suggesting that first words are driven by linguistic rather than conceptual factors.}
+\label{fig:cdi_cats}
+\end{figure*}
+
 
 
 In sum, despite producing a first word during different points in their conceptual development, both early and later producers in our sample chose to talk about the same semantic categories, and in many cases, the same things. This finding suggests that first words tend to reflect concepts that are available early (at least to those children who have the wherewithal to talk about them). Why then do children consistently pick certain words? In the next analysis, we examine the role of input frequency and phonological complexity in determining which words are predicted. 
