--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -165,7 +165,6 @@ In sum, we see some evidence for over-optimism (estimating first words earlier t
 
 The variability in children's age of first production gives us a natural tool for asking about the relationship between conceptual and linguistic development. All things being equal between samples---which they are almost certainly not, since younger language producers might be more sophisticated conceptually as well---younger children should be less conceptually sophisticated and hence might produce words for a more restricted range of concepts. Alternatively, if the concepts that children most want to talk about are present early \cite{snedeker2007,snedeker2012,gleitman1990}, we should predict no difference in the distribution of first words for older and younger children. 
 
-
 In our next analysis, we tested the hypothesis that the distribution of first words would differ between children who were younger and those who were older. To avoid issues of data sparsity across word forms, we assigned words to the categories that appear on the CDI instrument (e.g., Animals, Games and Routines, Toys, People, etc.) and conducted our analysis over the category distribution of words (a loose proxy for their semantic distribution). We assigned CDI categories consistently across datasets for words that did not appear on the CDI word list. Ninety-one children were excluded because their first word could not be categorized. 
 
 %CDI cats
@@ -207,8 +206,12 @@ Across datasets, input frequency and phonetic complexity consistently predicted 
 \end{figure}
 
 \section{General Discussion}
+What can children's first productive utterances reveal about their conceptual and linguistic development? 
+Utilizing large-scale data from parental reports of first words, we conducted three major analyses on the time-course of productive language emergence, distributions of conceptual categories across early and later first words, and some factors that play a role in predicting first word production. Interestingly, we found that 75\% of children produce a first word prior to 12 months, the conventionally cited age. Furthermore, we found that children's first words generally reflect the concepts that are available early in development, suggesting some independence between conceptual and linguistic development. Finally, we suggested that two factors -- input frequency and phonetic complexity -- consistently predicted the number of children producing a given word as their first utterance. 
 
-BIAS BIAS BIAS
+Despite the degree of consistency we observed in these datasets, it is important to again acknowledge the limitations and drawbacks of data drawn from parental self-report, and the same caveats that present themselves with any data collected by self-report must be observed here as well. We attempted to counter these issues by collecting data from a number of diverse samples, and by providing explicit definitions of what consituted a first word. Additionally, we did not find evidence of overt biases in reporting very young first word productions, and we observed similar patterns of productions across all four datasets. 
+
+Our findings suggest that the lag between comprehension and production in the first year of life may be shorter than traditionally thought. Additionally, conceptual and linguistic development seem to exhibit a certain degree of independence, with children early and later in development producing words about concepts that are available to them early. It is likely therefore, that linguistic rather than conceptual factors may constrain the set of possible first words and give rise to some words being consistently produced as first utterances. 
 
 \section{Acknowledgements}
 
