--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -1,14 +1,43 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+
+%% Created for Rose Schneider at 2015-01-29 13:56:20 -0800 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{tardif2007,
+	Author = {Tardif, C.J.T},
+	Date-Added = {2015-01-29 21:53:43 +0000},
+	Date-Modified = {2015-01-29 21:55:04 +0000},
+	Journal = {Advances in Psychological Science},
+	Title = {Cross-linguistic differences in children's early word acquisition},
+	Volume = {3},
+	Year = {2007}}
+
+@article{kuhl1996,
+	Author = {Kuhl, P.K. and Meltzoff, A.N.},
+	Date-Added = {2015-01-29 21:47:48 +0000},
+	Date-Modified = {2015-01-29 21:56:19 +0000},
+	Journal = {The Journal of the Acoustical Society of America},
+	Month = {2438},
+	Number = {4},
+	Pages = {2425},
+	Title = {Infant vocalizations in response to speech: Vocal imitation and developmental change},
+	Volume = {100},
+	Year = {1996}}
+
 @book{morgan1996,
 	Author = {Morgan, James L and Demuth, Katherine},
 	Date-Added = {2015-01-27 00:14:45 +0000},
 	Date-Modified = {2015-01-27 00:15:28 +0000},
 	Journal = {Signal to syntax: Bootstrapping from speech to grammar in early acquisition},
 	Pages = {1--22},
-	Publisher = {Mahwah, N.J.:  Lawrence Erlbaum Associates. },
-	Title = {Signal to Syntax:  Bootstrapping from Speech to Grammar in Early Acquisition.},
+	Publisher = {Mahwah, N.J.: Lawrence Erlbaum Associates.},
+	Title = {Signal to Syntax: Bootstrapping from Speech to Grammar in Early Acquisition.},
 	Year = {1996}}
 
 @article{snedeker2012,
@@ -35,7 +64,6 @@
 	Title = {Relations between semantic and cognitive development in the one-word stage: The specificity hypothesis},
 	Volume = {57},
 	Year = {1986}}
-
 
 @article{mullahy1986,
 	Author = {Mullahy, John},
