--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -154,7 +154,7 @@ In sum, we see some evidence for over-optimism (estimating first words earlier t
 
 
 %FIGURE 1
-\begin{figure}[t]
+\begin{figure}[]
 \center{\includegraphics[scale=.4]{figures/agedata_4sets.pdf}}
 \caption{\label{fig:cdfs} Cumulative probability of a child having produced her first word across development. In all datasets, more than 75\% percent of children had produced their first word by their first birthday and more than half had produced their first word by 10 months. Shaded regions show 95\% confidence intervals computed by non-parametric bootstrap.}
 \end{figure}
@@ -199,7 +199,7 @@ To predict the number of observations of each of a set of a categorical outcomes
 
 Across datasets, input frequency and phonetic complexity consistently predicted the number of children who produced each word as their first word. As we hypothesized, in almost all cases candidate words were more likely to be first words if they were higher frequency in children's input, and if they had fewer phonemes (Figure~\ref{fig:hurdles}). In conjunction with the analyses above, these results suggest a high degree of consistency in children's first productions, independent of conceptual development, and dependent instead on linguistic input and speech production fluency.
 
-\begin{figure}[tb]
+\begin{figure}[h!]
 \center{\includegraphics[width=.48\textwidth]{figures/hurdle_params.pdf}}
 \caption{\label{fig:hurdles} Parameter estimates for hurdle models predicting children's first words. Models showed a high degree of consistency across datasets: first words tend to be higher frequency and have fewer phonemes. Intercepts are omitted for clarity.}
 \end{figure}
