--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -12,10 +12,10 @@
 \usepackage[english]{babel}
 \usepackage{array}
 \usepackage{pbox}
-\usepackage{soul}
+% \usepackage{soul}
 \usepackage[usenames,dvipsnames]{xcolor}
 
-\newcommand{\hlc}[2][yellow]{ {\sethlcolor{#1} \hl{#2}} }
+% \newcommand{\hlc}[2][yellow]{ {\sethlcolor{#1} \hl{#2}} }
 
 
 
@@ -126,11 +126,11 @@ While many parents reported that their child's first word was ``mama'' or ``dada
 \textbf{Dog} & \textbf{Ball} & \textbf{Hi} & Yum Yum \\ 
 \textbf{Uh--Oh} & \textbf{Bottle} & \textbf{Cat} & Woof Woof \\ 
 Duck & \textbf{Hi} & \textbf{Bye} & \textbf{Hi} \\
-Car & \textbf{Bye} & - & Vroom \\
-\textbf{No} & Kitty & - & This \\
-\textbf{Cat} & Baba & - & Meow \\
-\textbf{Bye} & \textbf{Cat} & - & \textbf{Bottle} \\
-\textbf{Up}, \textbf{More} & Milk & - & \textbf{Ball} \\
+Car & \textbf{Bye} &  & Vroom \\
+\textbf{No} & Kitty &  & This \\
+\textbf{Cat} & Baba &  & Meow \\
+\textbf{Bye} & \textbf{Cat} &  & \textbf{Bottle} \\
+\textbf{Up}, \textbf{More} & Milk &  & \textbf{Ball} \\
 \hline 
 \end{tabular}
 \caption{\label{tab:top10} Top ten first words (excluding ``mama'' and ``dada'') from each of the four datasets we examined. Words repeated across datasets are bolded. Included are only words with more than 1 instance.}
@@ -205,12 +205,12 @@ Across datasets, input frequency and phonetic complexity consistently predicted 
 \end{figure}
 
 \section{General Discussion}
-What can children's first productive utterances reveal about their conceptual and linguistic development? 
-Utilizing large-scale data from parental reports of first words, we conducted three major analyses on the time-course of productive language emergence, distributions of conceptual categories across early and later first words, and some factors that play a role in predicting first word production. Interestingly, we found that 75\% of children produce a first word prior to 12 months, the conventionally cited age. Furthermore, we found that children's first words generally reflect the concepts that are available early in development, suggesting some independence between conceptual and linguistic development. Finally, we suggested that two factors -- input frequency and phonetic complexity -- consistently predicted the number of children producing a given word as their first utterance. 
 
-Despite the degree of consistency we observed in these datasets, it is important to again acknowledge the limitations and drawbacks of data drawn from parental self-report, and the same caveats that present themselves with any data collected by self-report must be observed here as well. We attempted to counter these issues by collecting data from a number of diverse samples, and by providing explicit definitions of what consituted a first word. Additionally, we did not find evidence of overt biases in reporting very young first word productions, and we observed similar patterns of productions across all four datasets. 
+What can children's first words reveal about their conceptual and linguistic development? Using parent report data, we presented three analyses, touching on the timing of productive language emergence, the distribution of conceptual categories across developmentally early and late first words, and factors that play a role in predicting which words are produced first. More than three quarters of children produced a first word prior to their first birthday, but the particular concepts these words named did not vary across age. Instead, two non-conceptual factors---input frequency and phonetic complexity---predicted the number of children who produced a particular word first.
 
-Our findings provide evidence for first word productions prior to 12 months. Additionally, conceptual and linguistic development seem to exhibit a certain degree of independence, with children early and later in development producing words about concepts that are available to them early. It is likely therefore, that linguistic rather than conceptual factors may constrain the set of possible first words and give rise to some words being consistently produced as first utterances. 
+Though parent reports are perhaps the only way to get large amounts of data about first words, this method is nevertheless limited by observer bias. We dealt with this issue in several ways, including by seeking converging evidence across multiple, distinct datasets and by testing explicitly for retrospective biases (which we did not find). Nevertheless, the possibility of bias is present, and future studies should consider the possibility of prospective report or dense recording techniques to extend and validate our findings. 
+
+We began by asking about the lag between comprehension and production in early language. One possible explanation for this lag is that there is a period during early infancy in which word knowledge consists of associations between auditory and visual stimuli and so there is no drive to communicate through production. In contrast to this hypothesis, our data suggest that many children are striving to communicate even quite early on. Confirming other studies of early vocabulary \cite{tardif2007}, the productions that parents reported also included functional and communicative items---``hi,'' ``more,'' and ``no''---as well as common nouns. In sum, our work suggests that studying the very first emergence of productive speech is a rich method for adding to our understanding of language development.
 
 \section{Acknowledgements}
 
