--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -121,22 +121,29 @@ While many parents reported that their child's first word was ``mama'' or ``dada
 \hline
 {\bf CDM} & {\bf MTurk} & {\bf Psycholinguists} & {\bf Wordbank} \\ 
 \hline
-\textbf{Ball} & \textbf{Dog} & \textbf{Up} & Baa Baa \\ 
-\textbf{Hi} & \textbf{No} & \textbf{More} & \textbf{Uh--Oh} \\
+\textbf{Ball} & \textbf{Dog} & Up & Baa Baa \\ 
+\textbf{Hi} & No & More & Uh--Oh \\
 \textbf{Dog} & \textbf{Ball} & \textbf{Hi} & Yum Yum \\ 
-\textbf{Uh--Oh} & \textbf{Bottle} & \textbf{Cat} & Woof Woof \\ 
+Uh--Oh & Bottle & \textbf{Cat} & \textbf{Woof Woof} \\ 
 Duck & \textbf{Hi} & \textbf{Bye} & \textbf{Hi} \\
 Car & \textbf{Bye} &  & Vroom \\
-\textbf{No} & Kitty &  & This \\
+No & Kitty &  & This \\
 \textbf{Cat} & Baba &  & Meow \\
-\textbf{Bye} & \textbf{Cat} &  & \textbf{Bottle} \\
-\textbf{Up}, \textbf{More} & Milk &  & \textbf{Ball} \\
+\textbf{Bye} & \textbf{Cat} &  & Bottle \\
+Up, More & Milk &  & \textbf{Ball} \\
 \hline 
 \end{tabular}
 \caption{\label{tab:top10} Top ten first words (excluding ``mama'' and ``dada'') from each of the four datasets we examined. Words repeated across datasets are bolded. Included are only words with more than 1 instance.}
 \end{table}
 
-Table \ref{tab:top10} shows the top ten words from each dataset. Overall, there is substantial consistency across the four datasets, with ``Hi'' appearing in all four, and ``Bye'', ``Ball'', and ``Cat'' appearing in three. We use these four datasets to conduct three primary analyses. Analysis 1 examines the age of first production, Analysis 2 describes the semantic categories of these words, and Analysis 3 attempts to predict which words tend to be produced on the basis of phonological complexity and input frequency.
+Table \ref{tab:top10} shows the top ten words from each dataset. Overall, there is substantial consistency across the four datasets, with ``Hi'' appearing in all four, and ``Bye'', ``Ball'', ``Dog''/``Woof Woof'', and ``Cat'' appearing in three. 
+
+Although we do not include an item analysis of individual words, it is worth noting that the word "No" was a frequent first word utterance, particularly in the MTurk dataset. The concept of negation is developmentally very interesting, and various functions of negation (denial, refusal, nonexistence) emerge at different points in a child's development \cite{pea1980}. In the MTurk dataset, we coded instances of "No" 
+
+
+We use these four datasets to conduct three primary analyses. Analysis 1 examines the age of first production, Analysis 2 describes the semantic categories of these words, and Analysis 3 attempts to predict which words tend to be produced on the basis of phonological complexity and input frequency.
+
+
 
 \subsection{Analysis 1: Age of First Word} 
 
