negation fun stuff

--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -138,11 +138,9 @@ Up, More & Milk &  & \textbf{Ball} \\
 
 Table \ref{tab:top10} shows the top ten words from each dataset. Overall, there is substantial consistency across the four datasets, with ``Hi'' appearing in all four, and ``Bye'', ``Ball'', ``Dog''/``Woof Woof'', and ``Cat'' appearing in three. 
 
-Although we do not include an item analysis of individual words, it is worth noting that the word "No" was a frequent first word utterance, particularly in the MTurk dataset. The concept of negation is developmentally very interesting, and various functions of negation (denial, refusal, nonexistence) emerge at different points in a child's development \cite{pea1980}. In the MTurk dataset, we coded instances of "No" 
-
+Although we do not include an item analysis of individual words, it is worth noting that the word "No" was a frequent first word utterance, particularly in the MTurk dataset. The concept of negation is developmentally very interesting, and various functions of negation (denial, refusal, nonexistence) emerge at different points in a child's development \cite{pea1980}. In the MTurk dataset, we coded instances of ``No'' based on parent descriptions of the situation surrounding the first word. Of 108 children producing ``No'' as a first word, 40\% did so as a refusal; there were no instances of ``No'' being used as denial, which is conceputally acquired later \cite{pea1980}. 
 
 We use these four datasets to conduct three primary analyses. Analysis 1 examines the age of first production, Analysis 2 describes the semantic categories of these words, and Analysis 3 attempts to predict which words tend to be produced on the basis of phonological complexity and input frequency.
-
 
 
 \subsection{Analysis 1: Age of First Word} 
