--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -2,12 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Rose Schneider at 2015-01-29 13:56:20 -0800 
+%% Created for Dan Yurovsky at 2015-02-02 13:53:26 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{shannon1948,
+	Author = {Shannon, Claude Elwood},
+	Date-Added = {2015-02-02 21:46:05 +0000},
+	Date-Modified = {2015-02-02 21:46:55 +0000},
+	Journal = {The Bell System Technical Journal},
+	Pages = {379--423},
+	Publisher = {ACM},
+	Title = {A mathematical theory of communication},
+	Volume = {27},
+	Year = {1948}}
+
+@article{pea1982,
+	Author = {Pea, Roy D},
+	Date-Added = {2015-02-01 20:50:59 +0000},
+	Date-Modified = {2015-02-01 20:51:12 +0000},
+	Journal = {Journal of Child Language},
+	Number = {03},
+	Pages = {597--626},
+	Publisher = {Cambridge Univ Press},
+	Title = {Origins of verbal logic: Spontaneous denials by two-and three-year olds},
+	Volume = {9},
+	Year = {1982}}
 
 @article{tardif2007,
 	Author = {Tardif, C.J.T},
